# NoteTakingApp

./: CMakeLists.txt  backup_3.8.py  resources.qrc  stylesheet.qss
User_Doc/: 2.MD  BuildingApp.MD  FirstStep,MD
include/: MainWindow.h
src/: MainWindow.cpp  main.cpp
